<resources>
    <string name="app_name">名片夹</string>
    <string name="title_activity_info">详细信息</string>
    <string name="phone">电话</string>
    <string name="name">姓名</string>
    <string name="address">地址</string>
    <string name="company">公司</string>
    <string name="zhiwu">职务</string>
    <string name="beizhu">备注</string>
    <string name="mail">邮箱</string>
    <string name="qq">QQ</string>
    <string name="save">保存联系人</string>
</resources>
